<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maxsn.vinylrecords.AddRecordActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <ImageView
        android:id="@+id/input_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_image"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="TAKE PHOTO"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_title"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_artist"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_length"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <RadioGroup
            android:id="@+id/input_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp">

            <RadioButton
                android:id="@+id/length_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_1" />

            <RadioButton
                android:id="@+id/length_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_2" />

            <RadioButton
                android:id="@+id/length_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_3" />

            <RadioButton
                android:id="@+id/length_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_4" />

            <RadioButton
                android:id="@+id/length_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_5" />

        </RadioGroup>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_original"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <CheckBox
            android:id="@+id/input_original"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_label"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/field_serial"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_serial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/format_released"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_released"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/format_purchased"
            android:textSize="25sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input_purchased"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="SUBMIT" />

</LinearLayout>
